<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Service Manager</string>
    <string name="job_row_product_name">Product Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginButtonLabel">Log In</string>
    <string name="emailAddressLabel">email</string>
    <string name="passwordLabel">Password</string>
    <string name="title_activity_callouts">Service Requests</string>
    <string name="calloutsTitle">My Jobs</string>
    <string name="calloutDateLabel">Date</string>
    <string name="calloutDateDefault">date</string>
    <string name="calloutNameDefault">name</string>
    <string name="calloutStreetDefault">street</string>
    <string name="calloutTownDefault">Town</string>
    <string name="calloutCountyDefault">county</string>
    <string name="calloutPhoneDefault">phone</string>
    <string name="title_activity_callout_form">Service Request Form</string>
    <string name="title_activity_product_history">Product History</string>
    <string name="calloutFormHeader">Add Service Request</string>
    <string name="customerSignOffHeader">Customer Signature</string>
    <string name="calloutFormNameDefault">Name</string>
    <string name="calloutFormStreetDefault">Street</string>
    <string name="calloutFormTownDefault">Town</string>
    <string name="calloutFormDefault">County</string>
    <string name="calloutFormCountyDefault">County</string>
    <string name="calloutFormPhoneDefault">Phone Number</string>
    <string name="calloutRowPumpDefault">Pump</string>
    <string name="calloutFormDateDefault">Date</string>
    <string name="calloutFormDateLabel">Date</string>
    <string name="calloutFormNameLabel">Name</string>
    <string name="calloutFormStreetLabel">Street</string>
    <string name="calloutFormCountyLabel">County</string>
    <string name="calloutFormAddButtonLabel">Add</string>
    <string name="addCalloutMenuLabel">Add Callout</string>
    <string name="calloutFormTownLabel">Town</string>
    <string name="calloutFormPhoneLabel">Phone</string>
    <string name="title_activity_callout_screen">Service Requests</string>
    <string name="addNewCallOutMenuItemLabel">New Service Request</string>
    <string name="calloutFormPumpLabel">Pump</string>
    <string name="rowPumpNumberDefault">PumpNr</string>
    <string name="rowPumpDescriptionDefault">PumpDescription</string>
    <string name="title_activity_callout_details">Service Details</string>
    <string name="calloutDetailsHeader">Job Details</string>
    <string name="calloutDetailsDateDefault">Date</string>
    <string name="calloutDetailsNameDefault">Name</string>
    <string name="calloutDetailsStreetDefault">Street</string>
    <string name="calloutDetailsTownDefault">Town</string>
    <string name="callotoutDetailsCountyDefault">County</string>
    <string name="calloutDetailsPhoneDefault">PhoneNumber</string>
    <string name="calloutDetailsPumpDefault">Pump</string>
    <string name="calloutRowIdDefault">Id</string>
    <string name="calloutDetailsReportedFaultDefault">Reported Fault</string>
    <string name="calloutFormReportedFaultLabel">Fault</string>
    <string name="action_edit_report">Edit</string>
    <string name="editCalloutButtonLabel">Save</string>
    <string name="title_activity_report">Report</string>
    <string name="reportHeader">Report</string>
    <string name="sparesHeader">Parts Used</string>
    <string name="reportText">report text here</string>
    <string name="action_report">Report</string>
    <string name="sparesOrderRowDateDefault">Date</string>
    <string name="sparesOrderRowPartNumberDefault">Part Number</string>
    <string name="sparesOrderRowQuantityDefault">Qty</string>
    <string name="sparesOrderRowDeleteButtonLabel">Delete</string>
    <string name="sparesOrderRowPartDescriptionDefault">Description</string>
    <string name="speresOrderRowEditButtonDefault">Edit</string>
    <string name="title_activity_edit_report">Edit Report</string>
    <string name="editReport">Observations and Repairs</string>
    <string name="editReportSaveButtonLabel">Save</string>
    <string name="reportTextDefault">Report Text Here</string>
    <string name="editReportButtonLabel">Edit</string>
    <string name="orderSpareHeader">Order Spare</string>
    <string name="addSpareButtonLabel">Order</string>
    <string name="deleteSparesOrderButton">Delete</string>
    <string name="sparePartsRowSaveButtonLabel">Save</string>
    <string name="changeDateButtonLabel">Change Date</string>
    <string name="title_activity_pick_date">PickDate</string>
    <string name="pickDateButton">OK</string>
    <string name="diallerButton">Phone Number</string>
    <string name="calloutScreenServiceMan">Name Here</string>
    <string name="dateHint">dd/mm/yyyy</string>
    <string name="moreText"><![CDATA[Observations & Repairs]]></string>
    <string name="pickDateHeader">Select Date for Service Requests</string>
    <string name="job_row_phone">Phone</string>
    <string name="job_details_product_name">Product Name</string>
    <string name="job_details_fault">Fault</string>
    <string name="job_details_customer_name">Customer Name</string>
    <string name="job_details_phone_number">Phone</string>
    <string name="job_details_street">street</string>
    <string name="job_details_town">town</string>
    <string name="report_product_name">Product Name</string>
    <string name="report_fault">Fault</string>
    <string name="report_service_engineer">Engineer Name</string>
    <string name="job_details_go_to_report">Report</string>
    <string name="report_heading">Observations</string>
    <string name="part_list_row_description">description</string>
    <string name="part_list_row_quantity">Qty</string>
    <string name="report_orrder_parts_header">Order Spare Parts</string>
    <string name="report_photos_header">Photos</string>
    <string name="selectPhotoMethod">Choose to browse gallery for a photo or take photo with camera</string>
    <string name="browse">Gallery</string>
    <string name="takePhoto">Camera</string>
    <string name="report_pictures_header">Photos</string>
    <string name="title_activity_report_photos">Report Photos</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_header">Log In</string>
    <string name="part_list_spinner_description">description</string>
    <string name="part_list_spinner_id">id</string>
    <string name="title_activity_barcode_scanner">BarcodeScanner</string>
    <string name="rb_job_job_progress_traveling">Travelling to job</string>
    <string name="rb_job_progress_on_site">Arrived on site</string>
    <string name="rb_job_progress_start_job">Started job</string>
    <string name="rb_job_progress_job_complete">Job Complete</string>
    <string name="rb_job_progress_return_visit">Return visit required</string>
    <string name="title_activity_report_videos">report_videos</string>
    <string name="title_report_videos">Report Videos</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_customer_sign_off">CustomerSignOff</string>
    <string name="title_activity_video_play">VideoPLay</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="product_history_row_date">Date</string>
    <string name="job_history_row_fault">Fault</string>
     <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="jobHistoryTitle">Title</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="report_product_description">description</string>
    <string name="job_details_product_description">description</string>
    <string name="logout">Log Out</string>


</resources>
