<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"

    tools:context="ie.hodmon.computing.service_manager.CalloutForm"
    >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#14cd8d"
        android:layout_width="match_parent"
        android:id="@+id/layout3"
        android:paddingTop="16dp"
        android:paddingBottom="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/calloutDetailsHeader"
        android:id="@+id/calloutDetailsHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />
        </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/job_details_product_name"
        android:id="@+id/job_details_product_name"
        android:layout_below="@+id/layout3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/job_details_fault"
        android:id="@+id/job_details_fault"
        android:layout_below="@+id/job_details_product_name"
        android:layout_alignStart="@+id/job_details_product_name"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/job_details_customer_name"
        android:id="@+id/job_details_customer_name"
        android:layout_below="@+id/job_details_fault"
        android:layout_alignStart="@+id/job_details_fault"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/job_details_phone_number"
        android:id="@+id/job_details_phone_number"
        android:layout_below="@+id/job_details_customer_name"
        android:layout_alignStart="@+id/job_details_customer_name"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/job_details_street"
        android:id="@+id/job_details_street"
        android:layout_below="@+id/job_details_phone_number"
        android:layout_alignStart="@+id/job_details_phone_number"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/job_details_town"
        android:id="@+id/job_details_town"
        android:layout_below="@+id/job_details_street"
        android:layout_alignStart="@+id/job_details_street"
        android:layout_marginTop="16dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/call_details_directions"
        android:layout_above="@+id/job_details_phone_number"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_directions_car_black_36dp"
        android:onClick="map" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/job_details_call"
        android:src="@drawable/ic_call_black_36dp"
        android:layout_alignTop="@+id/call_details_directions"
        android:layout_toStartOf="@+id/call_details_directions"
        android:layout_marginEnd="32dp"
        android:onClick="dialNumber" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/job_details_go_to_report"
        android:id="@+id/job_details_go_to_report"
        android:layout_below="@+id/job_details_town"
        android:layout_alignStart="@+id/job_details_town"
        android:layout_marginTop="32dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/job_details_report_arrow"
        android:layout_alignBottom="@+id/job_details_go_to_report"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_chevron_right_black_36dp"
        android:onClick="openReport" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:id="@+id/rg_job_progress"
        android:layout_below="@+id/job_details_go_to_report"
        >



        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/rb_job_job_progress_traveling"
            android:id="@+id/rb_travelling"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_job_progress_on_site"
            android:id="@+id/rb_on_site"
            android:enabled="false"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_job_progress_start_job"
            android:enabled="false"
            android:id="@+id/rb_start_job"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_job_progress_job_complete"
            android:id="@+id/rb_job_complete"
            android:enabled="false"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_job_progress_return_visit"
            android:id="@+id/rb_return_visit"
            android:checked="false"
            android:enabled="false" />

    </RadioGroup>

</RelativeLayout>