<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sparesOrderRowPartDescriptionDefault"
        android:id="@+id/sparesOrderRowDescription"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sparesOrderRowQuantityDefault"
        android:id="@+id/sparesOrderRowQuantity"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speresOrderRowEditButtonDefault"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/sparesOrderRowEditButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:onClick="editSpare"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteSparesOrderButton"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/deleteSpareButton"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/sparesOrderRowEditButton"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:onClick="deleteSpare"
         />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerForQuantity"
        android:entries="@array/quantitySpinnerValues"
        android:spinnerMode="dropdown"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/sparesOrderRowDescription"
        android:layout_toStartOf="@+id/deleteSpareButton"
        />

</RelativeLayout>