<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundBlue"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".login">

    <EditText
        android:layout_width="wrap_content"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"

        android:ems="10"
        android:id="@+id/emailAddress"
        android:layout_marginBottom="192dp"
        android:layout_above="@+id/button"
        android:layout_toEndOf="@+id/emailAddressLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/emailAddressLabel"
        android:layout_alignStart="@+id/emailAddress" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonLabel"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:onClick="login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/emailAddressLabel"
        android:id="@+id/emailAddressLabel"
        android:layout_alignBottom="@+id/emailAddress"
        android:layout_toStartOf="@+id/button"
        android:layout_marginEnd="32dp"
        android:hint="\@hodmonpumpservices.com" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/passwordLabel"
        android:id="@+id/passwordLabel"
        android:layout_alignBottom="@+id/password"
        android:layout_alignEnd="@+id/emailAddressLabel" />
</RelativeLayout>

